--- a/client/src/document/organisms/sidebar/index.scss
+++ b/client/src/document/organisms/sidebar/index.scss
@@ -93,6 +93,10 @@
       padding-bottom: unset;
       position: unset;
       top: unset;
+
+      ~ .sidebar-inner-nav {
+        margin-top: unset;
+      }
     }
   }
 
